# noneq-work

./: .gitignore  README.md  pyproject.toml
notes/: fluctuation_theorems.md  shadow_jarzynski.md  shadow_work.md
scripts/: demo_fluctuation_theorems.py  demo_shadow_work.py  plot_style.py
src/: potentials.py
src/noneq/: estimators.py  integrators.py  potentials.py
