[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noneq"
version = "0.1.0"
description = "Simulations and notes for non-equilibrium work relations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

